# BiOSGen

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  __init__.py  demo copy.ipynb  demo.ipynb  environment.yml  evaluation_metrics.csv  loratest.ipynb  main.ipynb  model copy.ipynb  model.ipynb  model_architecture_Downsample  model_architecture_StyleExtractor  model_architecture_Upsample  model_architecture_VanillaEncoder  preprocess_test.ipynb  pyproject.toml  readme.md  requirements.txt  sample_test.ipynb  test.ipynb  test_nuclei.ipynb
configs/: config.yml  cut_config.yml  train_config.yml
cut/: dataloader.py  global_loss.py  local_loss.py  model.py  network.py  summarize_data.py  training_demo.py  utils.py
cyclegan/: dataloader.py  launch.sh  loader.py  test.sh  train.sh
demo/: task1.ipynb  task2.ipynb  tutorials.ipynb
doc/: layers.md
docs/: Makefile  conf.py  requirements.txt
i2iTranslation/: base_model.py  global_loss.py  local_loss.py  training_demo.py  utils.py
notebooks/: demo 2.ipynb  style.ipynb  vae.ipynb
osgen/: ViT.py  __init__.py  base.py  dataloader.py  demo 2.ipynb  embedding.py  embeddings.py  encoder.py  loss.py  network.py  nn.py  openaimodel.py  pipeline.py  resnet.py  sample_unet.py  style.ipynb  style_extractor.py  test copy.ipynb  test.ipynb  test.py  train copy.ipynb  train.ipynb  unet.py  utils.py  vae copy.ipynb  vae.ipynb  vae.py  vcm.py  vit.py
pix2pix/: dataloader.py  launch.sh  loader.py  test.sh  train.sh
preprocess/: __init__.py  dataloader.py  llm.py  patches.py  patches_utils.py  test.py  tissue_mask.py  utils.py
report/: INFORMS-IJDS-Template.tex  main.tex  rapportENSIAS.cls
scripts/: batch_train.sh  data_installer.py  data_installer.sh  launch.sh  load_data.py  setup_env.sh
(+69 files in other folders)
