# -*- coding: utf-8 -*-
# @Author: H. T. Duong Vu

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "biosgen"
version = "1.0.0"
description = "A sample Python project"
readme = "README.md"
requires-python = "=3.10"
license = { file = "LICENSE" }

keywords = ["generative-ai", "nst", "bioinformatics"]

authors = [{ name = "H. T. Duong Vu", email = "vuhoang.thduong@gmail.com" },
           { name = "Agustí Alentorn", email = "agusti.alentorn@icm-institute.org" },
           { name = "Tamara Künzle", email = "tamara.kunzle@icm-institute.org" }]
maintainers = [
  { name = "H. T. Duong Vu", email = "vuhoang.thduong@gmail.com" },
  { name = "Tamara Künzle", email = "tamara.kunzle@icm-institute.org" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "opencv-python","torch","torchvision","numpy","pandas",
  "matplotlib","seaborn","scikit-image","requests",
  "scikit-learn","pyyaml","tqdm","transformers","einops",
  "diffusers","accelerate","thop","omegaconf",
  "torchviz","scipy","pytorch-fid","clean-fid","torchinfo"
]
# [project.optional-dependencies]
# dev = ["check-manifest"]
# test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/kurosawaxyz/BiOSGen"
"Bug Reports" = "https://github.com/kurosawaxyz/BiOSGen/issues"
"Source" = "https://github.com/kurosawaxyz/BiOSGen"

# [project.scripts]
# sample = "sample:main"


# [tool.setuptools]
# package-data = { "sample" = ["*.dat"] }